--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -25,7 +25,7 @@
             android:value="@integer/google_play_services_version" />
         <meta-data
             android:name="com.google.android.maps.v2.API_KEY"
-            android:value="AIzaSyDHCIymrqPrz4Rrc6Bxv0l-E9vE5VvABKc" />
+            android:value="API KEY" />
 
         <activity android:name=".SplashScreenActivity">
             <intent-filter>
